app/assets/stylesheets/main.css.sass
@import "cerulean"
@import "twitter/bootstrap/responsive"

$lightBlue: #45aeea
$darkBlue: rgb(3, 68, 130)

@mixin backdrop($color, $opacity)
  z-index: 1

  &:before
    display: block
    content: ''
    position: absolute
    top: 0
    bottom: 0
    left: 0
    right: 0
    background-color: $color
    opacity: $opacity
    filter: alpha(opacity=($opacity * 100))
    z-index: -1

@mixin span($columns)
  @extend .span#{$columns}, [class*="span"]

nav
  @include backdrop($lightBlue, 1)

  position: absolute
  top: 0
  bottom: 0
  left: 0
  width: 200px
  padding-top: 24px
  color: #fff

  ul
    @extend .nav, .nav-list

    li.header
      @extend .nav-header
      background-color: $darkBlue
      color: #fff

    li a
      color: #fff

header
  p
    @extend .lead

main
  @extend .container-fluid
  margin-left: 240px
  margin-right: 40px
  padding-top: 24px
  padding-bottom: 24px

footer
  @include backdrop($darkBlue, 0.75)

  position: fixed
  bottom: 0
  left: 200px
  right: 0
  height: 40px
  padding: 0 1em
  color: #fff
  line-height: 40px

table
  @extend .table

#notice
  @extend .alert

  &.success
    @extend .alert-success

  &.warning
    @extend .alert-warning

  &.error
    @extend .alert-error

#news
  @extend .row-fluid

  #daily-news
    @include span(6)

  #site-news
    @include span(6)

form
  #submission_title,
  #submission_body
    @extend .input-block-level

  input[type="submit"]
    @extend .btn, .btn-primary

.author
  @extend .lead

  &:before
    content: 'by '
    font-size: 90%

article.submission
  margin-top: 20px

  p
    white-space: pre

span.rating a
  @extend .badge

  color: #fff

  &:hover
    @extend .badge-info

span.current a
  @extend .badge-success

